[package]
name = "num_reader"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Small lib for automating reading numbers from stdin"
homepage = "https://github.com/alordash/rs_num_reader"
repository = "https://github.com/alordash/rs_num_reader"
readme = "README.md"
exclude = [".cargo_vcs_info.json", ".gitignore"]

[lib]
name = "num_reader"
path = "src/num_reader.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num-traits = "^0.2.14"
